Fix masthead text on mobile

--- a/style.desktop.css
+++ b/style.desktop.css
@@ -91,6 +91,10 @@ body {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
+h1 {
+  line-height: 0;
+}
+
 .title {
   font-size: 17px;
   line-height: 40px;
